hphp/test/zend/good/Zend/tests/traits/bug60369.php.expectf

Fatal error: trait declaration of property 'same' is incompatible with previous declaration in %s/bug60369.php on line 7
